2005-10-25  Stipe Tolj  <stolj@wapme-group.de>
   * wap/cookies.c: added TODO to reflect the need to unify the functions
     wap/cookies.c:parse_http_date() and gwlib/date.c:date_http_parse(), these
     are obviously doing "the same", except the return value, source code
     indenting. NLC.
  
2005-10-24  Stipe Tolj  <stolj@wapme-group.de>
   * wap/wsp_headers.c, check/check_date.c: re-interpretation of return value
     for gwlib/date.c:date_parse_http(), we assume that the signed long is
     negative only for those values beyond epoch time border, hence wrap to
     unsigned for further processing.
   
2005-10-24  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: updating well known WBXML public identifier IDs and 
     WBXML token array up to current Encoding-Version 1.5. NLC.
   * wap/wsp_strings.def: updating well known content type tokens, added
     registerd tokens now too for future use, updating push application IDs.  
   
2005-10-21  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/dlr-mysql.conf: fixed the naming change from change set
     2005-09-21, where the 'mysql-connection' group changed to use 'username'
     and 'password' as login credentials instead of the mysql prefixes.
     Thanks to Mike Harris <mikeh@mite.net> who pointed this out.
     [Msg-Id: <200510201656.j9KGuqch027946@outmail.freedom2surf.net>]

2005-10-10  Stipe Tolj  <stolj@wapme-group.de>
   * test/test_regex.c: added output of the sub-strings matching a regular
     expression, just for the sake of readability.
     
2005-10-07  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: added modems group for Sony Ericsson T63x, 
     found at Heny Junior's blog describing the use on a MacOS X system. 
     [URL: http://henryjunior.com/blog/?p=12] 
     
2005-10-06  Stipe Tolj  <stolj@wapme-group.de>
   * gwlib/octstr.c: fixed a critical bug in octstr_split() where we would loop 
     infinetly inside the while clause cuasing octstr_search() to allocate 